# hamonikr-stacer

./: .gitignore  README.md  release.sh
Release/: stacer_1.1.0hamonikr1.debian.tar.xz  stacer_1.1.0hamonikr1.dsc  stacer_1.1.0hamonikr1_amd64.build  stacer_1.1.0hamonikr1_amd64.buildinfo  stacer_1.1.0hamonikr1_amd64.changes  stacer_1.1.0hamonikr2.debian.tar.xz  stacer_1.1.0hamonikr2.dsc  stacer_1.1.0hamonikr2_amd64.buildinfo  stacer_1.1.0hamonikr2_amd64.changes
Release/stacer-1.1.0hamonikr1/applications/: stacer.desktop
Release/stacer-1.1.0hamonikr1/debian/: changelog  files
Release/stacer-1.1.0hamonikr1/stacer/lib/: libfreeimage.so.3  libnimf.so.1  libsystemd.so.0
Release/stacer-1.1.0hamonikr1/stacer/translations/: stacer_es.qm  stacer_pl.qm  stacer_ru.qm
Release/stacer-1.1.0hamonikr2/applications/: stacer.desktop
Release/stacer-1.1.0hamonikr2/debian/: changelog
Release/stacer-1.1.0hamonikr2/stacer/lib/: libQt5DBus.so.5  libQt5Network.so.5  libQt5XcbQpa.so.5  libblkid.so.1  libcairo.so.2  libdbus-1.so.3  libgdk-x11-2.0.so.0  libicuuc.so.66  (+9 more)
applications/: stacer.desktop
cmake/cxxbasics/: CXXBasics.cmake  DefaultSettings.cmake  InitCXXBasics.cmake
cmake/cxxbasics/accelerators/: UseCCache.cmake  UseCompilerCacheTool.cmake  UseFasterLinkers.cmake  UseSCCache.cmake
cmake/cxxbasics/compiler_detection/: GetTargetArch.cmake
cmake/cxxbasics/helpers/: FnMktemp.cmake  MacroCustomMessages.cmake  MacroOpt.cmake
debian/: README.source  changelog  control  copyright  install  links  postinst  postrm  prerm  rules  watch
debian/upstream/: metadata
docs/: BUILD
stacer/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp  stacer.pro  static.qrc
stacer-core/Info/: cpu_info.cpp  cpu_info.h  disk_info.cpp  system_info.cpp
stacer-core/Utils/: file_util.cpp  format_util.cpp
stacer/Managers/: app_manager.cpp  setting_manager.cpp
stacer/Pages/AptSourceManager/: apt_source_manager_page.cpp  apt_source_manager_page.ui
stacer/Pages/Dashboard/: dashboard_page.cpp
stacer/Pages/Resources/: history_chart.cpp  resources_page.cpp
stacer/Pages/Search/: search_page.cpp
stacer/Pages/Services/: services_page.ui
stacer/Pages/Settings/: settings_page.cpp  settings_page.h  settings_page.ui
stacer/Pages/StartupApps/: startup_app_edit.cpp  startup_apps_page.ui
stacer/Pages/Uninstaller/: uninstallerpage.ui
stacer/static/: languages.json
stacer/static/themes/default/style/: style.qss
stacer/static/themes/light/style/: style.qss
translations/: stacer_ar.ts  stacer_ca-es.ts  stacer_de.ts  stacer_en.ts  stacer_es.ts  stacer_fr.ts  stacer_gl.ts  stacer_hi.ts  stacer_it.ts  stacer_kn.ts  stacer_ko.ts  stacer_ml.ts  stacer_nl.ts  stacer_oc.ts  stacer_pl.ts  stacer_pt.ts  stacer_ro.ts  stacer_ru.ts  stacer_sv.ts  stacer_tr.ts  stacer_ua.ts  stacer_vn.ts  stacer_zh-cn.ts  stacer_zh-tw.ts
(+25 files in other folders)
